[package]
name = "smashline_hook"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git", features = ["nro_internal"] }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
nnsdk = { git = "https://github.com/ultimate-research/nnsdk-rs" }
parking_lot = { version = "0.11.1", features = ["nightly"] }
lazy_static = "1.4.0"
bitflags = "1.2.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[features]
standalone = []